Add part 3 - "specializations using Truffle DSL, TypeSystem".